syntax = "proto3";

package proto;

message LoginReq {
  string name = 1;
  string password=2;
}

message LoginResp {
    string token=1;
}

service FirstWebsite {
  rpc Login(LoginReq) returns (LoginResp){}
}




